--- a/tours.html
+++ b/tours.html
@@ -263,6 +263,8 @@
                             </div>
                         </li>
                     </ul>
+                    <a href="" class="tours-list__show tours-title__link">Смотреть все →</a>
+                    <a href="" class="tours-list__btn new-btn">Подобрать тур</a>
                 </div>
             </div>
         </section>
@@ -541,7 +543,7 @@
             </div>
         </section>
 
-        <section class="tours-title">
+        <section class="tours-title --only">
             <div class="new-container --wide">
                 <div class="tours-title__wrapper">
                     <h1 class="tours-title__header new-h1">автобусные туры из москвы</h1>
