Added some fixes

--- a/school_hub.html
+++ b/school_hub.html
@@ -316,32 +316,60 @@
         <section class="tours-celebration">
             <div class="new-container">
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">отмечаем праздники</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">Экскурсии по возрасту</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>                    
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
                             <h3 class="tours-title__name">музыка</h3>
-                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-2.png" alt=""></div>
                             <h3 class="tours-title__name">литература</h3>
-                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <div class="tours-title__block">
+                                <a href="" class="tours-title__link">1 класс</a>
+                                <a href="" class="tours-title__link">2 класс</a>
+                                <a href="" class="tours-title__link">3 класс</a>
+                                <a href="" class="tours-title__link">4 класс</a>
+                            </div>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-3.png" alt=""></div>
                             <h3 class="tours-title__name">санкт-петербург</h3>
-                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <div class="tours-title__block">
+                                <a href="" class="tours-title__link">5 класс</a>
+                                <a href="" class="tours-title__link">6 класс</a>
+                                <a href="" class="tours-title__link">7 класс</a>
+                                <a href="" class="tours-title__link">8 класс</a>
+                                <a href="" class="tours-title__link">9 класс</a>
+                            </div>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
                             <h3 class="tours-title__name">санкт-петербург</h3>
-                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <div class="tours-title__block">
+                                <a href="" class="tours-title__link">10 класс</a>
+                                <a href="" class="tours-title__link">11 класс</a>
+                            </div>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <div class="tours-title__block">
+                                <a href="" class="tours-title__link">10 класс</a>
+                                <a href="" class="tours-title__link">11 класс</a>
+                            </div>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                     <div class="tours-celebration__desc">
                         <h2>самые интересные экскурсии в москве для школьников</h2>
@@ -401,7 +429,7 @@
                             Формат и направленность школьной экскурсии зависит от целей и запросов заказчика. Если поездка в Москву планируется впервые, детям отлично подойдет обзорная экскурсия по знакомым местам города на автобусе и пешком. Цена при этом будет вполне доступной и оправданной. За время дневной экскурсии школьники познакомятся с историческими и культурными объектами Москвы, архитектурными сооружениями и памятниками, а также узнают интересные факты из биографии известных людей от гида.
                             Хорошая организация экскурсионного тура для группы школьников подарит максимум потрясающих эмоций даже от короткой поездки.
                         </p>
-                        <a href="" class="tours-celebration__link new-btn" style="margin-left: 0;">Подобрать школьную экскурсию</a>
+                        <a href="" class="tours-celebration__link new-btn">Подобрать школьную экскурсию</a>
                     </div>
                 </div>
             </div>
@@ -410,7 +438,13 @@
         <section class="tours-another-filter">
             <div class="new-container">
                 <div class="tours-another-filter__wrapper">
-                    <h2 class="tours-another-filter__header new-h2">каникулы</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-another-filter__header new-h2">каникулы</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <h3 class="tours-title__name">музыка</h3>
@@ -440,6 +474,13 @@
                             <a href="#" class="tours-title__link">для старшеклассников</a>
                             <a href="#" class="tours-title__link">для подростков</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <a href="#" class="tours-title__link">Для школьников</a>
+                            <a href="#" class="tours-title__link">для старшеклассников</a>
+                            <a href="#" class="tours-title__link">для подростков</a>
+                        </div>                        
                     </div>
                     <div class="tours-another-filter__wrap">
                         <h3 class="tours-another-filter__subhead">по месяцам</h3>
@@ -501,7 +542,13 @@
         <section class="tours-celebration">
             <div class="new-container">
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">прием в москве</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">прием в москве</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>                    
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
@@ -527,10 +574,22 @@
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                 </div>
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">отмечаем праздники</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">отмечаем праздники</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>  
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
@@ -556,6 +615,12 @@
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                 </div>
             </div>
@@ -592,6 +657,12 @@
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                 </div>
             </div>
@@ -599,9 +670,15 @@
         <section class="tours-celebration --no-padded">
             <div class="new-container">
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">
-                        выездные программы
-                    </h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">
+                            выездные программы
+                        </h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div> 
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
@@ -627,6 +704,12 @@
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">гусь=хрустальный</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                     <div class="tours-celebration__desc">
                         <h2>виды экскурсионных туров для школьников по москве</h2>
@@ -635,7 +718,7 @@
                             Хорошая организация экскурсионного тура для группы школьников подарит максимум потрясающих эмоций даже от короткой поездки.
                         </p>
                         <a href="#" class="tours-title__link">Показать еще →</a>
-                        <a href="" class="tours-celebration__link new-btn" style="margin-top: 15px; margin-left: 0;">Подобрать школьную экскурсию</a>
+                        <a href="" class="tours-celebration__link new-btn">Подобрать школьную экскурсию</a>
                     </div>
                 </div>
             </div>
@@ -643,7 +726,13 @@
         <section class="tours-celebration">
             <div class="new-container">
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">гуманитарные предметы</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">гуманитарные предметы</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>                     
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
@@ -669,10 +758,22 @@
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                 </div>
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">естественно-научные предметы</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">естественно-научные предметы</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>                    
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
@@ -698,6 +799,12 @@
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
                         </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>                        
                     </div>
                 </div>
             </div>
