--- a/tours.html
+++ b/tours.html
@@ -437,7 +437,13 @@
         <section class="tours-celebration">
             <div class="new-container">
                 <div class="tours-celebration__wrapper">
-                    <h2 class="tours-celebration__header new-h2">отмечаем праздники</h2>
+                    <div class="tours-celebration__headline">
+                        <h2 class="tours-celebration__header new-h2">отмечаем праздники</h2>
+                        <div class="tours-reviews__controlls">
+                            <div class="tours-reviews__controll tours-reviews-prev">←</div>
+                            <div class="tours-reviews__controll tours-reviews-next">→</div>
+                        </div>
+                    </div>
                     <div class="tours-celebration__grid">
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-1.png" alt=""></div>
@@ -453,6 +459,12 @@
                         </div>
                         <div class="tours-celebration__grid-item">
                             <div class="tours-celebration-img"><img src="./assets/img/celebration-3.png" alt=""></div>
+                            <h3 class="tours-title__name">санкт-петербург</h3>
+                            <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
+                            <a href="#" class="tours-title__link">28 программ →</a>
+                        </div>
+                        <div class="tours-celebration__grid-item">
+                            <div class="tours-celebration-img"><img src="./assets/img/celebration-4.png" alt=""></div>
                             <h3 class="tours-title__name">санкт-петербург</h3>
                             <p class="tours-title__text">Короткий обзорный текст на две строки или может быть три строки максимум</p>
                             <a href="#" class="tours-title__link">28 программ →</a>
@@ -552,7 +564,7 @@
                             <div class="tours-title__slide">
                                 <div class="tours-title__slide-left"><img src="./assets/img/title-bg-2.jpg" alt=""></div>
                                 <div class="tours-title__slide-right">
-                                    <h3 class="tours-title__name">вы пересмотрите свой взгляд на путешествия автобусом</h3>
+                                    <h3 class="tours-title__name --bebas">вы пересмотрите свой взгляд на путешествия автобусом</h3>
                                     <p class="tours-title__text">Холодильник, тостер, микроволновая печь, дисплеи для просмотра медиа контента, WIFI — мы не любим себя ограничивать и даже в дороге окружаем себя комфортом.</p>
                                     <a href="#" class="tours-title__link">28 программ →</a>
                                 </div>
@@ -585,6 +597,10 @@
                                     1. Туристы должны вовремя прибывать к месту начала экскурсии, а также к местам сбора и отправки во время экскурсии. Экскурсовод не обязан ожидать опаздывающего экскурсанта.
                                     <br><br>
                                     2. Туристы обязуются соблюдать и выполнять правила техники безопасности, общественного поведения, в том числе рекомендации и правила распорядка мест временного пребывания, мест проведения экскурсий, музеев, транспортных средств и т.д.;                                    
+                                    <br><br>
+                                    2. Туристы обязуются соблюдать и выполнять правила техники безопасности, общественного поведения, в том числе рекомендации и правила распорядка мест временного пребывания, мест проведения экскурсий, музеев, транспортных средств и т.д.;    
+                                    <br><br>
+                                    2. Туристы обязуются соблюдать и выполнять правила техники безопасности, общественного поведения, в том числе рекомендации и правила распорядка мест временного пребывания, мест проведения экскурсий, музеев, транспортных средств и т.д.;    
                                 </p>
                             </div>
                             <div class="tours-faq__content" data-content="Cамые популярные туры">
