--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <section class="sitemap">
             <div class="new-container">
                 <ol class="sitemap__list">
-                    <li class="sitemap__item"><a href="./school.html">1. School</a></li>
-                    <li class="sitemap__item"><a href="./school_hub.html">2. School Hub</a></li>
-                    <li class="sitemap__item"><a href="./tours.html">3. Tours</a></li>
+                    <!-- <li class="sitemap__item"><a href="./school.html">1. School</a></li> -->
+                    <li class="sitemap__item"><a href="./school_hub.html">1. School Hub</a></li>
+                    <li class="sitemap__item"><a href="./tours.html">2. Tours</a></li>
+                    <li class="sitemap__item"><a href="./excursion_card.html">3. Excursion Card</a></li>
                 </ol>
             </div>
         </section>
